[Fix] Navbar boundary visible due to gradient bg in header

--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,11 @@ main {
   background: linear-gradient(99.99deg, #3c7031 0.9%, #4ca735 100%);
   padding: 1.6rem;
   padding-bottom: 5.25rem;
+  padding-top: calc(5.6rem + 1.6rem);
   color: #fff;
   font-size: 1.4rem;
   position: fixed;
-  top: 5.6rem;
+  top: 0;
   z-index: -1;
   max-width: inherit;
   width: 100%; }
@@ -74,7 +75,6 @@ main {
   position: fixed;
   z-index: 1;
   top: 0;
-  background: linear-gradient(99.99deg, #3c7031 0.9%, #4ca735 100%);
   width: 100%;
   max-width: inherit;
   padding: 1.6rem 2rem;
@@ -83,6 +83,9 @@ main {
   align-items: center; }
   .nav__icon {
     margin-right: 2.4rem; }
+  .nav--active {
+    background: linear-gradient(99.99deg, #3c7031 0.9%, #4ca735 100%);
+    border-bottom: 1px solid #e5e5e5; }
 
 .brands__title {
   font-weight: 500;
