--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -2,7 +2,6 @@
   position: fixed;
   z-index: 1;
   top: 0;
-  background: linear-gradient(99.99deg, #3c7031 0.9%, #4ca735 100%);
   width: 100%;
   max-width: inherit;
   padding: 1.6rem 2rem;
@@ -12,5 +11,10 @@
 
   &__icon {
     margin-right: 2.4rem;
+  }
+
+  &--active {
+    background: linear-gradient(99.99deg, #3c7031 0.9%, #4ca735 100%);
+    border-bottom: 1px solid $color-grey-1;
   }
 }
